Fixed bs-sidebar overlapping with the content on between tablet and desktop resolutions.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -549,3 +549,9 @@ a img.aligncenter {
         float: none;
     }
 }
+
+@media (max-width: @screen-lg-min) {
+    .bs-sidebar {
+        width: 220px !important;
+    }
+}
